<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.good9.sunghakgavemetodowork02.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:textAllCaps="true"
                android:text="@string/left_1stButton" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:textAllCaps="true"
                android:text="@string/left_2ndButton" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:textAllCaps="true"
                android:text="@string/left_3rdButton" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:textAllCaps="true"
                android:text="@string/left_4thButton" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:textAllCaps="true"
                android:text="@string/left_5thButton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/WhiteSmoke"
            android:layout_weight="3">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Gray"
                android:textAllCaps="true"
                android:text="@string/rightButton" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Gray"
                android:textAllCaps="true"
                android:text="@string/rightButton" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Gray"
                android:textAllCaps="true"
                android:text="@string/rightButton" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="8"
        android:background="@color/WhiteSmoke">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:text="@string/bottomButton" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:text="@string/bottomButton" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:text="@string/bottomButton" />
    </LinearLayout>
</LinearLayout>
